--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,11 +1,12 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: parameters_aws.yml }
     - { resource: security.yml }
     - { resource: services.yml }
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -71,3 +72,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# FOS User
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: fortyeight\UserBundle\Entity\User
